service-php-helloworld.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: console
    app.openshift.io/vcs-uri: 'https://github.com/sathishn5/DO180-apps'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /api/v1/namespaces/uxcwhf-console/services/php-helloworld
  resourceVersion: '80826010'
  name: php-helloworld
  uid: cb0e8390-6af3-4f64-aaea-691c3b62a565
  creationTimestamp: '2021-08-12T16:35:42Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2021-08-12T16:35:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8443,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:sessionAffinity': {}
          'f:type': {}
  namespace: uxcwhf-console
  labels:
    app: php-helloworld
    app.kubernetes.io/component: php-helloworld
    app.kubernetes.io/instance: php-helloworld
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: php-helloworld
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.3-ubi8
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: php-helloworld
    deploymentconfig: php-helloworld
  clusterIP: 172.30.196.21
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
