route-php-helloworld(1).yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  selfLink: /apis/route.openshift.io/v1/namespaces/uxcwhf-console/routes/php-helloworld
  resourceVersion: '80826032'
  name: php-helloworld
  uid: b9303c07-a4dd-4ebc-833e-489fcc571177
  creationTimestamp: '2021-08-12T16:35:42Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-08-12T16:35:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-08-12T16:35:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
  namespace: uxcwhf-console
  labels:
    app: php-helloworld
    app.kubernetes.io/component: php-helloworld
    app.kubernetes.io/instance: php-helloworld
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: php-helloworld
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.3-ubi8
spec:
  host: php-helloworld-uxcwhf-console.apps.ap46.prod.nextcle.com
  to:
    kind: Service
    name: php-helloworld
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: php-helloworld-uxcwhf-console.apps.ap46.prod.nextcle.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2021-08-12T16:35:42Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.ap46.prod.nextcle.com
